--- a/calculator.html
+++ b/calculator.html
@@ -24,7 +24,7 @@
       
       <br><br>
 
-      <button id="roll-btn" type="button" onclick="outcome">Roll</button>
+      <button id="roll-btn" type="button">Roll</button>
 
       <h1 id="resultArea"></h1>
 
@@ -38,6 +38,10 @@
   
   console.log(calculate($("#num-one").val()));
  }) 
+
+ var obj = {prop1: 'prop1Value', prop2: 'prop2Value', child: {childProp1: 'childProp1Value'}}
+console.log(obj)
+ 
 </script>
  
 </body>
